Add list transaction events call (#38)
Added a call to list the the transaction events in more of a log format.
This will be for a future addition that allow for following transactions
to help with debugging purposes.

This transaction list is implemented on the persistence layer via a
second table. This was choose over a material view/view due to access
speed over duplicating data.

Given the transactions should be function in an immutable way (the
backend prevents overwriting check in/out timestamps, duplicating the
data with a time series focus shouldn't have any risk of meaningfully
break anything.
