# swagger/api.yaml
@@ -459,6 +459,56 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /api/v1/library/transactions:
+    get:
+      tags:
+        - transactions
+      operationId: listTransactionEvents
+      summary: List transaction events
+      description: |
+        List all library transactions, ordered by timestamp (newest first).
+        Game titles and patron names filters stack, so if you filter by both title and patron name, 
+        only games with that title and patron name will be returned
+      parameters:
+        - in: query
+          name: game_title
+          schema:
+            type: string
+          description: Filter by game title (optional)
+        - in: query
+          name: patron_name
+          schema:
+            type: string
+          description: Filter by patron name (optional)
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 100
+          description: Limit the number of transactions returned (optional)
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+          description: Offset for pagination (optional)
+      responses:
+        '200':
+          description: List of library transactions successfully retrieved
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransactionEventList'
+        '400':
+          description: Invalid query parameters
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
     GameStatus:
@@ -641,6 +691,50 @@ components:
           description: ISO 8601 timestamp when the transaction occurred in UTC
           example: "2026-01-31T12:00:00Z"
       description: Request payload for making a check in/out transaction
+
+    TransactionEvent:
+      type: object
+      required:
+        - transaction_id
+        - patron
+        - game
+        - event_timestamp
+        - event_type
+      properties:
+        transaction_id:
+          type: string
+          format: uuid
+          description: Transaction ID
+          example: "f13bb82c-18dd-4a94-a878-44ca6706e2d9"
+        game:
+          $ref: "#/components/schemas/Game"
+        patron:
+          $ref: "#/components/schemas/Patron"
+        event_timestamp:
+          type: string
+          format: date-time
+          description: ISO 8601 timestamp when the transaction occurred in UTC
+          example: "2026-01-31T12:00:00Z"
+        event_type:
+          type: string
+          enum:
+            - check_in
+            - check_out
+          description: Type of transaction event
+          example: "check_out"
+      description: Record of a library transaction event
+
+    TransactionEventList:
+      type: object
+      required:
+        - transactions
+      description: List of transaction events
+      properties:
+        transactions:
+          type: array
+          items:
+            $ref: '#/components/schemas/TransactionEvent'
+          description: Array of transaction events
 
     ErrorResponse:
       type: object
